fixing welcome text so it doesn't wrap on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@
   flex-wrap: wrap;
 }
 
+.welcome-text {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .my-saved-books {
   font-size: clamp(1.5rem, 5vw, 3rem);
 }
